Working and looking good

--- a/podrzavaju nas.html
+++ b/podrzavaju nas.html
@@ -12,114 +12,314 @@
       <div class="main-title">
         <h1>Podržavaju nas</h1>
       </div>
-      <div class="sponsors-container">
-        <div class="sponsor-content">
-          <div class="rimac-automobili-generalni-sponzor">
-            <div class="rimac-slider">
-              <div class="slider-slide">
-                <img
-                  src="./assets/rimacautomobili-1.a6d41919.jpg"
-                  alt="rimac-automobili"
-                  class="rimac-automobili-image"
-                />
-              </div>
-              <div class="slider-slide">
-                <img
-                  src="./assets/rimacautomobili-2.66b3eac7.jpg"
-                  alt="rimac-automobili"
-                  class="rimac-automobili-image"
-                />
-              </div>
-              <div class="slider-slide">
-                <img
-                  src="./assets/rimacautomobili-3.d9107d12.jpg"
-                  alt="rimac-automobili"
-                  class="rimac-automobili-image"
-                />
-              </div>
-              <div class="slider-slide">
-                <img
-                  src="./assets/rimacautomobili-4.a58e0603.jpg"
-                  alt="rimac-automobili"
-                  class="rimac-automobili-image"
-                />
-              </div>
+      <div class="sponsor-content">
+        <div class="sponsor-image">
+          <div class="rimac-slider">
+            <div class="slider-slide">
+              <img
+                src="./assets/rimacautomobili-1.a6d41919.jpg"
+                alt="rimac-automobili"
+                class="rimac-automobili-image"
+              />
             </div>
-
-            <ul>
-              <li class="li-generalni-sponzor">Generalni sponzor</li>
-              <li class="li-rimac-automobili">Rimac Automobili</li>
-            </ul>
+            <div class="slider-slide">
+              <img
+                src="./assets/rimacautomobili-2.66b3eac7.jpg"
+                alt="rimac-automobili"
+                class="rimac-automobili-image"
+              />
+            </div>
+            <div class="slider-slide">
+              <img
+                src="./assets/rimacautomobili-3.d9107d12.jpg"
+                alt="rimac-automobili"
+                class="rimac-automobili-image"
+              />
+            </div>
+            <div class="slider-slide">
+              <img
+                src="./assets/rimacautomobili-4.a58e0603.jpg"
+                alt="rimac-automobili"
+                class="rimac-automobili-image"
+              />
+            </div>
           </div>
-          <div class="rimac-content">
-            <img
-              src="./assets/rimacautomobili.8a30526d.png"
-              alt="rimac-logo"
-              class="rimac-content-logo"
-            />
 
-            <p>
-              Osnovano 2009. godine sa sjedištem u Hrvatskoj, Rimac Automobili
-              je tehnološko i proizvodno poduzeće koje razvija i proizvodi
-              električna vozila visokih performansi i omogućuje inovativna
-              tehnološka rješenja globalnim proizvođačima automobila. Temeljen
-              na viziji osnivača i izvršnog direktora Mate Rimca, poduzeće je
-              započelo kao projekt u garaži s idejom stvaranja najbržeg
-              električnog automobila na svijetu. Prvi automobil takve vrste,
-              Concept_One, bio je gotovo u cijelosti proizveden u Hrvatskoj u
-              ograničenoj seriji, a predstavljen je 2011. godine. Stručnost u
-              specifičnoj grani automobilske industrije danas ih postavlja kao
-              ključnog dobavljača tehnologije i sustava elektrifikacije mnogim
-              industrijskim partnerima, uključujući Porsche, Aston Martin,
-              Koenigsegg, Renault, CUPRA i od sada, Automobili Pininfarina.
-              Čitav razvoj i proizvodnja tehnologije i automobila je u umovima i
-              rukama tima koji danas broji gotovo 500 zaposlenika i 26
-              nacionalnosti s lokacijama u Svetoj Nedelji, Splitu i Osijeku te
-              Kini
-            </p>
-          </div>
+          <ul>
+            <li class="li-top">Generalni sponzor</li>
+            <li class="li-bottom">Rimac Automobili</li>
+          </ul>
         </div>
-        <div class="sponsor-content">
-          <div class="rimac-automobili-generalni-sponzor">
-            <img
-              src="./assets/rimacautomobili-1.a6d41919.jpg"
-              alt="rimac-automobili"
-              class="rimac-automobili-image"
-            />
-            <ul>
-              <li class="li-generalni-sponzor">Generalni sponzor</li>
-              <li class="li-rimac-automobili">Rimac Automobili</li>
-            </ul>
-          </div>
-          <div class="rimac-content">
-            <img
-              src="./assets/rimacautomobili.8a30526d.png"
-              alt="rimac-logo"
-              class="rimac-content-logo"
-            />
+        <div class="content-paragraph">
+          <img
+            src="./assets/rimacautomobili.8a30526d.png"
+            alt="rimac-logo"
+            class="content-logo"
+          />
 
-            <p>
-              Osnovano 2009. godine sa sjedištem u Hrvatskoj, Rimac Automobili
-              je tehnološko i proizvodno poduzeće koje razvija i proizvodi
-              električna vozila visokih performansi i omogućuje inovativna
-              tehnološka rješenja globalnim proizvođačima automobila. Temeljen
-              na viziji osnivača i izvršnog direktora Mate Rimca, poduzeće je
-              započelo kao projekt u garaži s idejom stvaranja najbržeg
-              električnog automobila na svijetu. Prvi automobil takve vrste,
-              Concept_One, bio je gotovo u cijelosti proizveden u Hrvatskoj u
-              ograničenoj seriji, a predstavljen je 2011. godine. Stručnost u
-              specifičnoj grani automobilske industrije danas ih postavlja kao
-              ključnog dobavljača tehnologije i sustava elektrifikacije mnogim
-              industrijskim partnerima, uključujući Porsche, Aston Martin,
-              Koenigsegg, Renault, CUPRA i od sada, Automobili Pininfarina.
-              Čitav razvoj i proizvodnja tehnologije i automobila je u umovima i
-              rukama tima koji danas broji gotovo 500 zaposlenika i 26
-              nacionalnosti s lokacijama u Svetoj Nedelji, Splitu i Osijeku te
-              Kini
-            </p>
-          </div>
+          <p>
+            Osnovano 2009. godine sa sjedištem u Hrvatskoj, Rimac Automobili je
+            tehnološko i proizvodno poduzeće koje razvija i proizvodi električna
+            vozila visokih performansi i omogućuje inovativna tehnološka
+            rješenja globalnim proizvođačima automobila. Temeljen na viziji
+            osnivača i izvršnog direktora Mate Rimca, poduzeće je započelo kao
+            projekt u garaži s idejom stvaranja najbržeg električnog automobila
+            na svijetu. Prvi automobil takve vrste, Concept_One, bio je gotovo u
+            cijelosti proizveden u Hrvatskoj u ograničenoj seriji, a
+            predstavljen je 2011. godine. Stručnost u specifičnoj grani
+            automobilske industrije danas ih postavlja kao ključnog dobavljača
+            tehnologije i sustava elektrifikacije mnogim industrijskim
+            partnerima, uključujući Porsche, Aston Martin, Koenigsegg, Renault,
+            CUPRA i od sada, Automobili Pininfarina. Čitav razvoj i proizvodnja
+            tehnologije i automobila je u umovima i rukama tima koji danas broji
+            gotovo 500 zaposlenika i 26 nacionalnosti s lokacijama u Svetoj
+            Nedelji, Splitu i Osijeku te Kini
+          </p>
+        </div>
+      </div>
+      <div class="sponsor-content">
+        <div class="sponsor-image">
+          <img
+            src="./assets/rimacautomobili-1.a6d41919.jpg"
+            alt="rimac-automobili"
+            class="rimac-automobili-image"
+          />
+          <ul>
+            <li class="li-top">Zlatni sponzor</li>
+            <li class="li-bottom">Ericson Nikola Tesla</li>
+          </ul>
+        </div>
+        <div class="content-paragraph">
+          <img
+            src="./assets/rimacautomobili.8a30526d.png"
+            alt="eriscon-nikola-tesla"
+            class="content-logo"
+          />
+
+          <p>
+            Ericsson Nikola Tesla je vodeći izvoznik znanja u obliku
+            telekomunikacijskih proizvoda i usluga te inovativnih ICT rješenja.
+            Cilj im je oblikovati umreženo društvo kroz razvoj modernih mreža.
+            Zahvaljujući snažnom iskoraku u nove tehnologije poput 5G, loT, Big
+            Data, IP i rješenja u oblaku, napredne robotike, umjetne
+            inteligencije, virtualne i proširene stvarnosti, posljednjih godina
+            intenzivno zapošljavaju. Studentima se kroz mentoriranje i timski
+            rad na "cutting edge" tehnologijama pruža prilika za profesionalni
+            razvoj.
+          </p>
+        </div>
+      </div>
+      <div class="sponsor-content">
+        <div class="sponsor-image">
+          <img
+            src="./assets/rimacautomobili-1.a6d41919.jpg"
+            alt="rimac-automobili"
+            class="rimac-automobili-image"
+          />
+          <ul class="ul-extension-engine">
+            <li class="li-top">Zlatni sponzor</li>
+            <li class="li-bottom">ExtensionEngine</li>
+          </ul>
+        </div>
+        <div class="content-paragraph">
+          <img
+            src="./assets/rimacautomobili.8a30526d.png"
+            alt="rimac-logo"
+            class="content-logo-extension-engine"
+          />
+
+          <p>
+            Kroz višegodišnju suradnju s najboljim organizacijama na svijetu kao
+            što su Harvard, MIT, Johnson &amp; Johnson i Fitch Ratings,
+            ExtensionEngine je prepoznat kao vodeći pružatelj usluga u području
+            online učenja. Želja im je pomoći obrazovnim institucijama i
+            tvrtkama stvoriti nove, revolucionarne načine učenja jer je klasično
+            učenje često dosadno, zastarjelo i monotono. Sve to rade u opuštenoj
+            atmosferi iz njihovih ureda u Bostonu, New Yorku, Splitu i Zagrebu.
+          </p>
+        </div>
+      </div>
+      <div class="sponsor-content">
+        <div class="sponsor-image">
+          <img
+            src="./assets/rimacautomobili-1.a6d41919.jpg"
+            alt="rimac-automobili"
+            class="rimac-automobili-image"
+          />
+          <ul>
+            <li class="li-top">Zlatni sponzor</li>
+            <li class="li-bottom">Hattrick</li>
+          </ul>
+        </div>
+        <div class="content-paragraph">
+          <img
+            src="./assets/rimacautomobili.8a30526d.png"
+            alt="rimac-logo"
+            class="content-logo"
+          />
+          <p>
+            Hattrick Developers je novi R&amp;D odjel sa sjedištem u Splitu.
+            Formiran 2018. godine unutar Hattrick-PSK tvrtke, danas broji već
+            preko 80 članova. Na međunarodnoj razini kao član Fortuna
+            Entertainment Group (FEG), Hattrick Developers radi na širokom
+            spektru proizvoda, rasprostranjenih kroz 5 država preko više
+            platformi i tehnologija. Time osigurava obilje mogućnosti za svakog
+            developera i sve ostale uloge u suvremenom razvojnom procesu
+            softvera. Kroz timski rad zajedno stvaraju vrhunske digitalne
+            proizvode unutar entertainment i gaming industrije.
+          </p>
         </div>
       </div>
     </main>
+    <section class="sponsors-section">
+      <h1>Srebrni sponzori</h1>
+      <div class="sponsors-icons-wrapper">
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="arsfutura"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="atos"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="bundesdruckerei"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="dobartek"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="emovis"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="hr cloud"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="hr prodigy"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="infobip"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="icodelab"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="netmedia"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="profico"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="travelsoft"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="typequast"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="zagrebacka banka"
+          class="sponsors-icon"
+        />
+      </div>
+      <h1>Brončani sponzori</h1>
+      <div class="sponsors-icons-wrapper">
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="shift"
+          class="sponsors-icon"
+        />
+      </div>
+      <h1>Organizacijski partneri</h1>
+      <div class="sponsors-icons-wrapper">
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="fesb"
+          class="sponsors-icon"
+        />
+      </div>
+      <h1>Sponzor nagradne igre</h1>
+      <div class="sponsors-icons-wrapper">
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="futura it"
+          class="sponsors-icon"
+        />
+      </div>
+      <h1>Medijski pokrovitelji</h1>
+      <div class="sponsors-icons-wrapper">
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="bug"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="dalmacija danas"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="netokracija"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="splittechcity"
+          class="sponsors-icon"
+        />
+      </div>
+      <h1>Prijatelji</h1>
+      <div class="sponsors-icons-wrapper">
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="grad split"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="hiperprodukcija"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="nesto"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="sveuciliste u split"
+          class="sponsors-icon"
+        />
+        <img
+          src="./assets/rimacautomobili.8a30526d.png"
+          alt="szt"
+          class="sponsors-icon"
+        />
+      </div>
+    </section>
   </body>
 </html>
